# sumit

./: .gitignore  LICENSE  README.md  pyproject.toml  sumit.py  t.py  t_whisper.py
